# chip8-lib

./: CMakeLists.txt
include/: chip8.h
src/: chip8.cpp
